# raven-foundry

./: .codacy.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANTIPATTERN.md  LICENSE  Makefile  PROPOSAL.md  STANDARDS.md  pyproject.toml
.github/workflows/: safeguard.yml
.opencode/context/core/: navigation.md
.opencode/context/core/standards/: anti-patterns.md  code-patterns.md  code-quality.md  code-style.md  complexity.md  coverage.md  documentation.md  imports.md  lazy-loading.md  validation.md
.opencode/context/core/workflows/: code-review.md  task-delegation.md
.opencode/context/project-intelligence/: navigation.md  technical-domain.md
docs/agent/: code-patterns.md  navigation.md  technical-domain.md
docs/agent/standards/: anti-patterns.md  code-patterns.md  code-style.md  complexity.md  coverage.md  documentation.md  imports.md  lazy-loading.md  navigation.md  validation.md
docs/agent/workflows/: code-review.md  navigation.md  task-delegation.md  user-documentation.md
scripts/: init_db.py
src/raven/: __init__.py  config.py  main.py  paths.py
src/raven/cli/: __init__.py  cache.py  info.py  ingest.py  init.py  lazy_group.py  resolver.py  search.py  search_db.py  search_display.py  search_normalize.py  search_orchestrator.py
src/raven/embeddings/: AGENTS.md  __init__.py
src/raven/ingestion/: AGENTS.md  __init__.py  api.py  bibtex.py  bibtex_normalize.py  identifier.py  metadata.py  pipeline.py  search.py  search_client.py  search_keyword.py  search_utils.py  text.py
src/raven/llm/: AGENTS.md  __init__.py
src/raven/storage/: AGENTS.md  __init__.py  authors.py  db.py  embedding.py  identifier.py  migrations.py  paper.py  paper_authors.py  paper_queries.py
tests/: __init__.py  conftest.py  test_embeddings.py  test_ingestion.py  test_storage.py  test_unit.py
tests/contracts/: test_module_rules.py
tests/integration/: test_cache.py  test_cli.py  test_info.py  test_ingest.py
tests/unit/: test_config.py  test_llm.py  test_main.py
tests/unit/test_cli/: test_search_db.py  test_search_local.py  test_search_orchestrator.py
tests/unit/test_embeddings/: __init__.py  test_lazy_import.py
tests/unit/test_ingestion/: __init__.py  test_abstract.py  test_bibtex.py  test_combine.py  test_doi.py  test_format.py  test_helpers.py  test_ingest.py  test_retry.py  test_search.py  test_search_ingest.py
tests/unit/test_storage/: __init__.py  test_add.py  test_column.py  test_embedding.py  test_extract.py  test_get_id.py  test_init.py  test_integration.py  test_migration.py  test_paper_authors.py  test_paper_authors_db.py  test_schema.py  test_serialize.py  test_vector_dim.py  test_vector_search.py
